fixing TestBlock layout issues

--- a/blocks/TestBlock/css/test_block.less
+++ b/blocks/TestBlock/css/test_block.less
@@ -73,6 +73,7 @@ ul.exercise {
             line-height: 32px;
             padding-left: 5px;
             text-transform: none;
+            display: block;
         }
 
         select {
@@ -116,6 +117,13 @@ ul.exercise {
                 }
             }
         }
+ 
+        .ui-sortable .ui-state-highlight { 
+            padding: 2em;
+            background: #28497c;
+            border-color: #28497c;
+        }
+ 
         .studip_input_wrapper.correct_item {
             background-color: lightgreen;
         }
@@ -229,4 +237,3 @@ ul.exercise {
     }
 
 }
-
